# TrajectoryCompletion

./: .gitignore  CMakeLists.txt  README.md  runDot.sh
GPStudio/: CMakeLists.txt  GPStudio.files  config.h.in  parameters.ini  parameters_beijingtaxi.ini  parameters_demo.ini
GPStudio/include/: adapter_widget.h  axis_indicator.h  bbox_2d.h  color_map.h  common.h  dgraph.h  force_update_visitor.h  gps_trajectories.h  gps_trajectory.pb.h  guiless.h  information.h  junction_graph.h  junction_network.h  l1skeleton.h  l1skeleton_graph.h  l1skeleton_with_heading.h  l_shape_iterator.h  main_window.h  osg_utility.h  osg_viewer_widget.h  parameters.h  pick_handler.h  point_intersector.h  process_graph.h  qcustomplot.h  renderable.h  scene_widget.h  singleton.h  skeleton_graph.h  stateset_manipulator.h  task_dispatcher.h  threaded_painter.h  toggle_handler.h  trajectory_completion.h  update_callback.h  viterbi.h  voting_map_renderer.h
GPStudio/resources/: main_window.ui
GPStudio/src/: adapter_widget.cpp  axis_indicator.cpp  bbox_2d.cpp  color_map.cpp  common.cpp  dgraph.cpp  force_update_visitor.cpp  gps_trajectories.cpp  gps_trajectory.pb.cpp  guiless.cpp  information.cpp  junction_graph.cpp  junction_network.cpp  l1skeleton.cpp  l1skeleton_graph.cpp  l1skeleton_with_heading.cpp  l_shape_iterator.cpp  main.cpp  main_window.cpp  osg_utility.cpp  osg_viewer_widget.cpp  parameters.cpp  pick_handler.cpp  point_intersector.cpp  process_graph.cpp  qcustomplot.cpp  renderable.cpp  scene_widget.cpp  skeleton_graph.cpp  stateset_manipulator.cpp  task_dispatcher.cpp  threaded_painter.cpp  toggle_handler.cpp  trajectory_completion.cpp  update_callback.cpp  viterbi.cpp  voting_map_renderer.cpp
data/traj_pbf/: region5C-large.trace-ss20-n5.pbf
doc/: DEMO.md  Doxyfile
matlab/: drawTrajs.m  drawTrajs1.m  readTraj.m  readTrajs.m  visualizeCompletionDemo.m
proto/: CMakeLists.txt  gps_trajectory.proto
